fixed typo in Task 1c.

--- a/hw02_approximation.ipynb
+++ b/hw02_approximation.ipynb
@@ -670,7 +670,7 @@
    "source": [
     "**Task 1c. (10 points)** Add calculation of the first, second, and third derivatives based on the spline interpolation to the routine <tt>cubic_spline</tt> above (3 points). Write a routine to estimate integral of $f(x)$ in the interval $[a,b]$ using interpolating cubic spline for $f(x)$ and its coefficient vectors $a$, $b$, $c$, $d$. (4 points).\n",
     "\n",
-    "Plot the first three derivatives of $\\log_{10} P$ for some function (for example, the sine) and comment on their behavior (smoothness, continuity). Test the accuracy of the integral for a function for which you know the exact answer (e.g., $\\sin x$ or $e^x$.) (3 points). "
+    "Plot the first three derivatives for some function (for example, the sine) and comment on their behavior (smoothness, continuity). Test the accuracy of the integral for a function for which you know the exact answer (e.g., $\\sin x$ or $e^x$.) (3 points). "
    ]
   },
   {
