added notebook on optimization methods, plus small changes to other files.

--- a/04_histograms.ipynb
+++ b/04_histograms.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# ASTR 21100 \n",
+    "\n",
+    "# \"Computational Techniques in Astrophysics\"\n",
+    "\n",
+    "## Instructor: Andrey Kravtsov\n",
+    "\n",
+    "### office: ERC 415; email: kravtsov@uchicago.edu\n",
+    "### office hours: Tue, 10:30am-noon (unless noted otherwise)\n",
+    "\n",
+    "#### Teaching Assistants: \n",
+    "#### Dimitrios Tanoglidis (dtanoglidis@uchicaago.edu)\n",
+    "#### Georgios Zakharegkas (gzakharegkas@uchicago.edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Histograms and methods for choosing bin width, Kernel Density Estimate (KDE) method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -28,7 +61,7 @@
     }
    },
    "source": [
-    "Here is, for example, a very influential histogram of globular cluster metallicities from a paper by William Harris - astronomer who constructed and maintains the catalog of Milky Way's globular clusters that we've used to examine their metallicity distribution (<a href=\"http://ned.ipac.caltech.edu/level5/Harris2/Harris1.html\">Harris W. 1999, “Globular cluster systems: formation models and case studies”</a>). It's an older paper, so he uses older globular cluster catalog that contained fewer clusters, but he uses $N_{\\rm bins} = 26$, which is close to the peak of the above distribution. \n",
+    "Here is, for example, a very influential histogram of globular cluster metallicities from a paper by William Harris - astronomer who constructed and maintains the catalog of Milky Way's globular clusters that we've used to examine their metallicity distribution (<a href=\"http://ned.ipac.caltech.edu/level5/Harris2/Harris1.html\">Harris W. 1999, “Globular cluster systems: formation models and case studies”</a>). It's an older paper, so he uses older globular cluster catalog that contained fewer clusters, but he uses $N_{\\rm bins} = 26$, which is close to the most common choice you made. \n",
     "\n",
     "<img width=400 src=\"http://ned.ipac.caltech.edu/level5/Harris2/Figures/figure3.gif\"></img>"
    ]
@@ -74,7 +107,7 @@
     }
    },
    "source": [
-    "For example, <tt>'sturges'</tt> refers to the <a href=\"https://onlinelibrary.wiley.com/doi/full/10.1002/wics.35\">\"Sturges rule\"</a> that posits that for a sample vector of values $\\mathbf{x}$ of size $N$ the number of histogram bins should be $N_{\\rm Sturges}=\\lceil\\log_2 N\\rceil+1$, where $\\lceil\\ldots\\rceil$ indicates <a href=\"https://en.wikipedia.org/wiki/Floor_and_ceiling_functions#The_ceiling_function\">\"ceiling\" function</a> (nearest largest integer value). \n",
+    "For example, <tt>'sturges'</tt> refers to the <a href=\"https://onlinelibrary.wiley.com/doi/full/10.1002/wics.35\">\"Sturges rule\"</a> that posits that for a sample vector of values $\\mathbf{x}$ of size $N$ the number of histogram bins should be $N_{b, \\rm Sturges}=\\lceil\\log_2 N\\rceil+1$, where $\\lceil\\ldots\\rceil$ indicates <a href=\"https://en.wikipedia.org/wiki/Floor_and_ceiling_functions#The_ceiling_function\">\"ceiling\" function</a> (nearest largest integer value). \n",
     "\n",
     "<tt>'fd'</tt> refers to the <a href=\"https://en.wikipedia.org/wiki/Freedman%E2%80%93Diaconis_rule\">\"Freedman-Diaconis rule\"</a> that posits that the bin width should be\n",
     "$$h_{\\rm FD}=2\\,\\frac{{\\rm IQR(\\mathbf{x})}}{N^{1/3}},$$\n",
@@ -378,11 +411,33 @@
    "source": [
     "### Adaptive bin sizes \n",
     "\n",
-    "Objective methods for producing histograms with variable bin size are also used, in particular the <a href=\"http://jakevdp.github.io/blog/2012/09/12/dynamic-programming-in-python/\">***Bayesian blocks*** method</a> proposed by astronomer Jeff Scargle in 2012 (<a href=\"https://ui.adsabs.harvard.edu/abs/2013ApJ...764..167S/abstract\">Scargle et al. 2013</a>) for binning counts in astronomical time series, in which there are lull periods when nothing happens and large bin sizes can be used and sudden bursts of flux, as during gamma-ray bursts, when bin sizes need to be adaptively decreased to capture structure of the signal.   \n",
+    "Objective methods for producing histograms with variable bin size are also used, in particular the <a href=\"http://jakevdp.github.io/blog/2012/09/12/dynamic-programming-in-python/\">***Bayesian blocks*** method</a> proposed by astronomer Jeff Scargle and collaborators in 2012 (<a href=\"https://ui.adsabs.harvard.edu/abs/2013ApJ...764..167S/abstract\">Scargle et al. 2013</a>) for binning counts in astronomical time series, in which there are lull periods when nothing happens and large bin sizes can be used and sudden bursts of flux, as during gamma-ray bursts, when bin sizes need to be adaptively decreased to capture structure of the signal.   \n",
     "\n",
     "It uses approach similar to that of the Knuth method, but relaxes assumption of the constant bin size. \n",
     "\n",
     "For the case of globular cluster metallicities that we have considered it produces results similar to that of the Knuth's method. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Conclusions and guidelines\n",
+    "\n",
+    "* When it matters: i.e. when histogram shows structure in the data that may or may not be real, predictions of several objective methods should be tried for the bin size. \n",
+    "\n",
+    "\n",
+    "* Knuth and Shinazaki-Shinomoto methods are a good choice. For functions that exhibit rapid changes on different scales, adaptive bin size of the Bayesian blocks method of Scargle et al. (2013) should be considered as an alternative. \n",
+    "\n",
+    "\n",
+    "* Only when structure is apparent for the bin widths predicted by these methods should be considered to be real. \n",
+    "\n",
+    "\n",
+    "* Further proof that structure is real requires building a model and performing statistical model testing and comparison that is often non-trivial. "
    ]
   },
   {
