added lab03 and some changes to codes/histtools.py and codes/plot_utils.py

--- a/04_histograms.ipynb
+++ b/04_histograms.ipynb
@@ -191,7 +191,9 @@
     "\n",
     "$$N_{\\rm b}=\\alpha N^{1/3},$$\n",
     "\n",
-    "where $\\alpha$ depends on the distribution. This is why $N^{1/3}$ appears in many of the heuristic rules. "
+    "where $\\alpha$ depends on the distribution. This is why $N^{1/3}$ appears in many of the heuristic rules. \n",
+    "\n",
+    "More generally for histogramming data in $d\\leq 1$ dimensions, the optimal bin according to heuristic arguments based on a single peak Gaussian-like distribution are argued to scale as $N^{1/(2+d)}$ with the number of data points $N$. "
    ]
   },
   {
