fixed an algebraic error in ex 2 of hw03.ipynb

--- a/hw03.ipynb
+++ b/hw03.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "As discussed before, the *distance modulus* predicted by a cosmology model with a given values of $H_0$, $\\Omega_{\\rm m0}$, $\\Omega_\\Lambda$ is \n",
     "\n",
-    "$$\\mu(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) = m-M = 5\\log_{10}d_L + 25 = 5\\log_{10}\\frac{c}{H_0}\\,\\tilde{d}_L + 25 =5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) + 5\\log_{10}c - 5\\log_{10}H_0$$\n",
+    "$$\\mu(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) = m-M = 5\\log_{10}d_L + 25 = 5\\log_{10}\\frac{c}{H_0}\\,\\tilde{d}_L + 25 =5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) + 5\\log_{10}c - 5\\log_{10}H_0 + 25$$\n",
     "\n",
     "When apparent magnitude at the time of peak brightness, $m_{\\rm SNIa}$, and redshift, $z$, is measured for a supernova type Ia in observations, and if we assume that all such supernovae have the same *intrinsic* luminosity at peak brightness, the observational estimate of their distance modulus can be written as \n",
     "\n",
@@ -426,14 +426,14 @@
     "A difference between observational estimate, $\\mu_{\\rm obs}$ and model prediction $\\mu(z,\\Omega_{\\rm m0},\\Omega_\\Lambda)$, where $z$ is the observed redshift of the supernova then can be written as \n",
     "\n",
     "\\begin{eqnarray}\n",
-    "\\Delta\\mu=\\mu_{\\rm obs} - \\mu(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) &=&m_{\\rm SNIa} - M_0 - 5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) - 5\\log_{10}c + 5\\log_{10}H_0=\\\\ \n",
-    "&=& m_{\\rm SNIa} - M_0 - 5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) -  \\left(M_0 + 5\\log_{10}\\,\\frac{c}{H_0}\\right)=\\\\\n",
+    "\\Delta\\mu=\\mu_{\\rm obs} - \\mu(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) &=&m_{\\rm SNIa} - M_0 - 5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) - 5\\log_{10}c + 5\\log_{10}H_0 - 25=\\\\ \n",
+    "&=& m_{\\rm SNIa}- 5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) -  \\left(M_0 + 5\\log_{10}\\,\\frac{c}{H_0}+25\\right)=\\\\\n",
     "&=& m_{\\rm SNIa} - 5\\log_{10}\\tilde{d}_L(z,\\Omega_{\\rm m0},\\Omega_\\Lambda) - \\tilde{M}_0, \n",
     "\\end{eqnarray}\n",
     "\n",
     "where \n",
     "\n",
-    "$$ \\tilde{M}_0 = \\left(M_0 + 5\\log_{10}\\,\\frac{c}{H_0}\\right).$$\n",
+    "$$ \\tilde{M}_0 = \\left(M_0 + 5\\log_{10}\\,\\frac{c}{H_0}+25\\right).$$\n",
     "\n",
     "In principle, $M_0$ and $H_0$ are quantities that could be measured for objects that have independent distance measurements. One of the key areas of modern astronomy are efforts to do just that. However, in this analysis we will assume that we don't know $M_0$ and $H_0$ with enough accuracy to keep them at constant values and will consider their combination $\\tilde{M}_0$ as a free parameter. Parameter $\\tilde{M}_0$ is not interesting to us itself because it is not a specific interesting parameter, but a combination of two interesting parameters that we cannot differentiate in this analysis. Such parameters in statistics are aptly called *nuisance parameters*. We will need to model it, but in the end we will not be particularly interested in its value. It is the mean density of mass and vacuum energy in the  the Universe, $\\Omega_{\\rm m0}$ and $\\Omega_\\Lambda$, that we want to constrain. \n",
     "\n",
