updated 05_optimization added 06c_sampling notebook

--- a/05_optimization.ipynb
+++ b/05_optimization.ipynb
@@ -933,7 +933,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Finding minimum/maximum of a function\n",
     "\n",
@@ -1037,7 +1041,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Derivative-free methods"
    ]
@@ -1110,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1121,13 +1129,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "completed in 0.376 sec\n",
-      "[1.00056143 1.00117233]\n"
+      "completed in 7.62 sec\n",
+      "[1.0000232  1.00005669]\n"
      ]
     }
    ],
    "source": [
-    "x0 = np.array([-10, 10.])\n",
+    "x0 = np.array([0.5, 0.5])\n",
     "#x0 = np.array([-10, 10, -5, 10, 5])\n",
     "\n",
     "tstart = default_timer()\n",
@@ -1243,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1254,17 +1262,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "completed in 0.0412 sec\n",
+      "completed in 0.0289 sec\n",
       "minimum at : [0.99513568 0.98998451 0.98069012 0.96593587 0.93354015]\n"
      ]
     }
    ],
    "source": [
-    "#x0 = [-10, 10]\n",
+    "x0 = [-10, 10]\n",
     "x0 = [-10, 10, -5, 10, 5]\n",
     "\n",
     "tstart = default_timer()\n",
-    "res = minimize(rosenbrock, x0, method='nelder-mead', tol=1.e-8)\n",
+    "res = minimize(rosenbrock, x0, method='nelder-mead', tol=1.e-12)\n",
     "print(\"completed in %.3g sec\"%(default_timer() - tstart))\n",
     "\n",
     "print(\"minimum at :\",res.x)"
@@ -1318,6 +1326,17 @@
     }
    },
    "source": [
+    "The reason the method is called \"differential evolution\" is because the initial population of points in $D$ dimensions can be thought of as evolving towards a minimum during algorithm iterations. The evolution is differential because it is driven by scaled differences between point locations. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "Interestingly, one of the initial drivers for development of this algorithm was a problem of solving the least squares mimimization problem to find coefficients of the 5D polynomial approximation using Chebyshev polynomial expansion, which was intractable with other methods. Since then, DE algorithm was successfully applied for this problem for up to 33-dimensional polynomials. \n",
     "\n",
     "In depth description of the differential algorithm, its variations, tests, and applications can be found in a book by R. Storn, K. Price and J. Lampinen \"*Differential evolution : a practical approach to global optimization*\" <a href=\"https://catalog.lib.uchicago.edu/vufind/Record/8875926\">available online</a> through U.Chicago library. "
@@ -1340,7 +1359,7 @@
     "$\\mathbf{x}^\\prime_i=\\mathbf{x}_{{\\rm now}, r_3} + s\\,(\\mathbf{x}_{{\\rm now}, r_2}-\\mathbf{x}_{{\\rm now}, r_1})$, where $s$ is a parameter. \n",
     "\n",
     "\n",
-    "* *Selection stage:* if $f(\\mathbf{x}^\\prime_i)< f(\\mathbf{x}_{{\\rm now},i})$, then $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}^\\prime_i$, else $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}_{{\\rm now},i}$ (no mutation). \n",
+    "* *Selection stage:* if $f(\\mathbf{x}^\\prime_i)\\leq f(\\mathbf{x}_{{\\rm now},i})$, then $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}^\\prime_i$, else $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}_{{\\rm now},i}$ (no mutation). \n",
     "\n",
     "Once all members of the population went through mutation and selection stages go back to the next iteration and $\\mathbf{X}_{\\rm next}$ becomes $\\mathbf{X}_{\\rm now}$ and the cycle repeats. \n",
     "\n",
@@ -1380,10 +1399,50 @@
     "            # generate random indices  ir1, ir2, ir3 \n",
     "            # where all indices are not equal to each other and not equal to i\n",
     "            xtry = xnow[ir3] + s * (xnow[ir1] - xnor[ir2])\n",
-    "            if func(xtry) < fnow[i]:\n",
+    "            if func(xtry) <= fnow[i]:\n",
     "                xnext[i] = xtry\n",
     "            else:\n",
     "                xnext[i] = xnow[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Initialization of the population for the DE algorithm \n",
+    "\n",
+    "Mutation stage of the algorithm requires that population members are in different locations, otherwise the difference $\\mathbf{x}_{{\\rm now}, r_2}-\\mathbf{x}_{{\\rm now}, r_1}$ will be zero and location of $\\mathbf{x}_{{\\rm now}, r_3}$ will simply be duplicated to location of $\\mathbf{x}^\\prime_i$ in the mutation stage.\n",
+    "\n",
+    "Thus, initial population members positions must be different. There are different ways to place population members. Assuming that we are searching for a minimum within some rectangular domain defined by the minimum and maximum values along each coordinate axis: $\\mathbf{x}_{\\rm min}$ and $\\mathbf{x}_{\\rm max}$, we can initialize the members as \n",
+    "\n",
+    "$$\\mathbf{x}_0 = \\mathbf{x}_{\\rm min} + (\\mathbf{x}_{\\rm max}-\\mathbf{x}_{\\rm min}) \\times \\mathrm{rand}(0,1),$$\n",
+    "\n",
+    "where $\\mathrm{rand}(0,1)$ is a random number uniformly distributed from 0 to 1. This choice makes sense if we do not know location of the minimum and we are spreading the population members as widely as possible. To make the distribution of members more uniform, certain placement strategies can be used instead of random distribution above, such as <a href=\"https://www.johndcook.com/blog/2009/03/16/quasi-random-sequences-in-art-and-integration/\">quasi-random sequences</a>.\n",
+    "\n",
+    "Another possibility is to initialize locations of population members around a given point $\\mathbf{x}_{0c}$ by using random numbers drawn from a Gaussian distribution centered at $\\mathbf{x}_{0c}$:\n",
+    "\n",
+    "$$\\mathbf{x}_0 = \\mathrm{gaussian}(\\mathbf{x}_{0c}, \\Sigma),$$\n",
+    "\n",
+    "where $\\Sigma$ is a vector of the rms dispersions along each of the coordinates (can be the same for all coordinates) or a <a href=\"https://datascienceplus.com/understanding-the-covariance-matrix/\">covariance matrix</a>. This choice makes sense if we have a good idea where the minimum is roughly, so that we can choose $\\mathbf{x}_{0c}$ to be near the suspected location. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### Modification of the DE algorithm using randomized $s$ scaling factor\n",
+    "\n",
+    "Although this is unlikely when the size of the evolved population is large (say $>10-20D$), for small population sizes it is possible that the same combinations of <tt>ir1, ir2, ir3</tt> will be drawn for multiple members. If the trial step is successful, this will result in multiple members having the same location. Several of such events can lead to all population members having the same location. Given that the algorithm relies on existence of multiple population members at different locations (population diversity), if population degenerates to a single point, the DE algorithm can longer work. \n",
+    "\n",
+    "To avoid this, one can replace constant scaling factor $s$ for each population member with a number randomly drawn from, say, Gaussian distribution centered at $s$ and with the rms dispersion of say $0.1s>0$ (this can be a parameter). In this case, the mutation stage will result in different locations, even if the <tt>ir1, ir2, ir3</tt> are the same for different population members. "
    ]
   },
   {
@@ -1412,19 +1471,19 @@
     "\n",
     "and $r_j$ is the random floating point number uniformly distributed in the interval $[0,1]$ that is generated for the index $j$, and $\\mathrm{ir}_i$ is the random integer uniformly distributed in the range $[0, D-1]$ generated for index $i$, which ensures that $\\mathbf{x}^{\\prime\\prime}_i$ gets at least one element from $\\mathbf{x}^\\prime_i$. The crossover parameter $\\mathrm{cr}\\in [0,1]$ is a constant set by user. \n",
     "\n",
-    "* *Selection stage:* if $f(\\mathbf{x}^{\\prime\\prime}_i)< f(\\mathbf{x}_{{\\rm now},i})$, then $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}^{\\prime\\prime}_i$, else $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}_{{\\rm now},i}$ (no mutation). \n"
+    "* *Selection stage:* if $f(\\mathbf{x}^{\\prime\\prime}_i)\\leq f(\\mathbf{x}_{{\\rm now},i})$, then $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}^{\\prime\\prime}_i$, else $\\mathbf{x}_{{\\rm next},i}=\\mathbf{x}_{{\\rm now},i}$ (no mutation). \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "completed in 3.93 sec\n",
+      "completed in 1.66 sec\n",
       "minimum at : [1. 1. 1. 1. 1.]\n"
      ]
     }
@@ -1443,6 +1502,19 @@
     "\n",
     "print(\"completed in %.3g sec\"%(default_timer() - tstart))\n",
     "print(\"minimum at :\",res.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### DE algorithm: parallelization\n",
+    "\n",
+    "Each iteration of the DE algorithm can be fairly easily parallelized because mutation and selection of each population member is independent. This allows using large population sizes and is particularly useful when function evaluation is expensive. "
    ]
   },
   {
