--- a/05_optimization.ipynb
+++ b/05_optimization.ipynb
@@ -1398,6 +1398,7 @@
     "        for i in range(npop):\n",
     "            # generate random indices  ir1, ir2, ir3 \n",
     "            # where all indices are not equal to each other and not equal to i\n",
+    "            # s can be a constant for large npop, but it's more safe to make it a Gaussian random number\n",
     "            xtry = xnow[ir3] + s * (xnow[ir1] - xnor[ir2])\n",
     "            if func(xtry) <= fnow[i]:\n",
     "                xnext[i] = xtry\n",
