updated histogram smoothing example

--- a/hist_contour_smoothing_example.ipynb
+++ b/hist_contour_smoothing_example.ipynb
@@ -34,41 +34,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def gauss_nd(x, means, icov):\n",
-    "    \"\"\"\n",
-    "    ln of N-dimensional unnormalized Gaussian pdf\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    x - real 1d numpy vector of size ndim\n",
-    "        position of a sample in ndim-dimensional space\n",
-    "    means - real 1d numpy vector of size ndim\n",
-    "        mean values of the Gaussian in each coordinate\n",
-    "    icov - real numpy array of size [ndim x ndim]\n",
-    "        inverse covariance matrix of the Gaussian\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    \n",
-    "    a real number \n",
-    "        ln(Gaussian)\n",
-    "    \"\"\"\n",
-    "    diff = x - means\n",
-    "    lpf = - 0.5*np.dot(diff , np.dot( icov , diff ) ) \n",
-    "    \n",
-    "    return lpf"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -76,7 +41,7 @@
     }
    },
    "source": [
-    "### Sampling a 2d Gaussian\n",
+    "### Sampling a 2d Gaussian with non-zero correlation\n",
     "\n",
     "Now let's sample a 2-dimensional Gaussian. If the Gaussian is characterized by the mean value in two variables, $\\vec{\\mu}=[\\mu_{x_1},\\mu_{x_2}]$, rms values, $\\sigma_{x_1}$, $\\sigma_{x_2}$ and correlation coefficient, $\\rho$. The covariance matrix is: \n",
     "\n",
@@ -88,56 +53,42 @@
     "  \\end{array} \\right)\n",
     "$$\n",
     "\n",
-    "Let's specify a Gaussian with zero means, unit variances in the two dimensions and a given correlation coefficient. Try to run this with $\\rho=0.95, 0.99, 0.999$ and check how distribution of resulting samples look like and how the acceptance ratio changes with $\\rho$. "
+    "Let's specify a Gaussian with zero means, unit variances in the two dimensions and a given correlation coefficient.\n",
+    "\n",
+    "The method used to generate correlated Gaussian numbers here is described in <a href=\"06c_distribution_sampling.ipynb\"><tt>06c_distribution_sampling.ipynb</tt></a> notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#generate 2 sequences of correlated random Gaussian numbers\n",
+    "\n",
+    "# specify rms values and correlation coefficient\n",
     "s1, s2, r = 1.0, 1.0, 0.95\n",
     "\n",
+    "# define means and covariance matrix \n",
     "means = [0., 0.]\n",
     "cov = [[s1**2, r*s1*s2], [r*s1*s2, s2**2]]\n",
     "\n",
-    "# compute the inverse covariance matrix\n",
-    "icov = np.linalg.inv(cov)\n"
+    "# compute lower triangle via Cholesky decomposition\n",
+    "Lcov = np.linalg.cholesky(cov)\n",
+    "\n",
+    "# number of random numbers to generate\n",
+    "nrnd = 1000\n",
+    "\n",
+    "# generate 2 vectors of uncorrelated Gaussian numbers of zero mean and unit variance of desired length\n",
+    "x = np.random.normal(size=(2,nrnd))\n",
+    "\n",
+    "# generate correlated numbers of zero mean\n",
+    "x1, x2 = np.dot(Lcov, x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "emcee acceptance fraction = 0.716\n"
-     ]
-    }
-   ],
-   "source": [
-    "import emcee\n",
-    "\n",
-    "ndim, nwalkers, nsteps = 2, 100, 10000\n",
-    "\n",
-    "p0 = np.random.rand(ndim * nwalkers).reshape((nwalkers, ndim))\n",
-    "\n",
-    "sampler = emcee.EnsembleSampler(nwalkers, ndim, gauss_nd, args=[means,icov])\n",
-    "\n",
-    "echain, prob, state = sampler.run_mcmc(p0, nsteps)\n",
-    "\n",
-    "# acceptance fraction averaged over all walkers\n",
-    "eacc = np.mean(sampler.acceptance_fraction)\n",
-    "print(\"emcee acceptance fraction = %.3g\"%(eacc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
