fixed an issue in ln L expression

--- a/lab_model_par_inference.ipynb
+++ b/lab_model_par_inference.ipynb
@@ -83,11 +83,11 @@
     "\n",
     "Suppose we have a measurement of some quantity $y_i$ with a Gaussian uncertainty $\\sigma_i$. Gaussianity means that the probability distribution function for the true value of $y_{i,\\rm true}$ is described by the Gaussian pdf: \n",
     "\n",
-    "$$ p(y_{i,\\rm true}) = \\frac{1}{\\sqrt{2\\pi}\\sigma}\\,\\exp\\left[-\\frac{(y_{i}-y_{i,\\rm true})^2}{2\\sigma_i^2}\\right].$$\n",
+    "$$ p(y_{i,\\rm true}) = \\frac{1}{\\sqrt{2\\pi}\\sigma_i}\\,\\exp\\left[-\\frac{(y_{i}-y_{i,\\rm true})^2}{2\\sigma_i^2}\\right].$$\n",
     "\n",
     "Likewise, if we have a model $m(\\mathbf{x})$ that depends on some vector of variables $\\mathbf{x}$ and that predicts the value of $y_{i, \\rm model}=m(\\mathbf{x})$ as a function of these parameters, then the conditional pdf of the measurement given the model parameters $\\mathbf{x}$ is \n",
     "\n",
-    "$$ p(y_{i}\\vert \\mathbf{x}) = \\frac{1}{\\sqrt{2\\pi}\\sigma}\\,\\exp\\left\\{-\\frac{[y_{i}-y_{i, \\rm model}(\\mathbf{x})]^2}{2\\sigma_i^2}\\right\\}.$$\n",
+    "$$ p(y_{i}\\vert \\mathbf{x}) = \\frac{1}{\\sqrt{2\\pi}\\sigma_i}\\,\\exp\\left\\{-\\frac{[y_{i}-y_{i, \\rm model}(\\mathbf{x})]^2}{2\\sigma_i^2}\\right\\}.$$\n",
     "\n",
     "If we integrate $p(y_{i}\\vert \\mathbf{x})$ over all possible values of $y_i$, we will get the probability of such measurement, under condition that model is correct. \n",
     "\n",
@@ -100,9 +100,9 @@
     "\n",
     "Now if we take natural log of both sides of the equation above, log of the product of pdfs will turn into sum of logarithms. If we also use the Gaussian pdf of $p(y_{i}\\vert \\mathbf{x})$ we will get: \n",
     "\n",
-    "$$\\ln L(\\mathbf{y}\\vert\\mathbf{x}) = -\\frac{1}{2}\\,\\sum\\limits_{i=0}^{N_d-1}\\frac{[y_{i}-y_{i, \\rm model}(\\mathbf{x})]^2}{\\sigma_i^2} \\equiv -\\frac{1}{2}\\,\\chi^2.$$\n",
+    "$$\\ln L(\\mathbf{y}\\vert\\mathbf{x}) = -\\frac{1}{2}\\,\\sum\\limits_{i=0}^{N_d-1}\\frac{[y_{i}-y_{i, \\rm model}(\\mathbf{x})]^2}{\\sigma_i^2} -\\sum\\limits_{i=0}^{N_d-1}\\ln(\\sqrt{2\\pi}\\sigma_i)= -\\frac{1}{2}\\,\\chi^2-\\sum\\limits_{i=0}^{N_d-1}\\ln(\\sqrt{2\\pi}\\sigma_i).$$\n",
     "\n",
-    "or $\\chi^2 = -2\\ln L(\\mathbf{y}\\vert\\mathbf{x})$. Thus, we see that $\\chi^2$ is directly related to the natural log of the likelihood function defined above. Minimizing $\\chi^2$ as a function of $\\mathbf{x}$ maximizes probability (because $\\chi^2$ is $\\ln L$ with the negative sign) that a sequence of measurements is consistent with the model. Thus, the values of $\\mathbf{x}$ that minimize $\\chi^2$ and maximize $L$ are the values for which model is most consistent with measurements or \"fits\" the measurements best. \n",
+    "or $\\chi^2 = -2\\ln L(\\mathbf{y}\\vert\\mathbf{x})+\\rm const$. Thus, we see that $\\chi^2$ is directly related to the natural log of the likelihood function defined above. Minimizing $\\chi^2$ as a function of $\\mathbf{x}$ maximizes probability (because $\\chi^2$ is $\\ln L$ with the negative sign) that a sequence of measurements is consistent with the model. Thus, the values of $\\mathbf{x}$ that minimize $\\chi^2$ and maximize $L$ are the values for which model is most consistent with measurements or \"fits\" the measurements best. \n",
     "\n",
     "From this description it may seem that $\\chi^2$ and likelihood $L$ are equivalent, so why introduce the latter? First of all, this should provide a more formal justification for using $\\chi^2$ as an objective (\"cost\") function for minimization. \n",
     "\n",
