fixed another equation in the lab notebook

--- a/lab_model_par_inference.ipynb
+++ b/lab_model_par_inference.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "**Task 1a. (10 points)** Write a routine that computes $\\ln L$ for this new 5-parameter model, where \n",
     "\n",
-    "$$\\ln L(\\mathbf{y}\\vert\\mathbf{x}) = -\\frac{1}{2}\\,\\sum\\limits_{i=0}^{N_{\\rm SN}-1}\\frac{\\Delta\\mu^2}{\\sigma_{\\Delta\\mu,i}^2}$$\n",
+    "$$\\ln L(\\mathbf{y}\\vert\\mathbf{x}) = -\\frac{1}{2}\\,\\sum\\limits_{i=0}^{N_{\\rm SN}-1}\\frac{\\Delta\\mu^2}{\\sigma_{\\Delta\\mu,i}^2}-\\sum\\limits_{i=0}^{N_{\\rm SN}-1}\\ln(\\sqrt{2\\pi}\\sigma_{\\Delta\\mu,i}).$$\n",
     "\n",
     "and $\\sigma_{\\Delta\\mu,i}^2$ is total uncertainty of the observational estimate of the distance modulus that accounts for uncertainties in $m_B$, $x_1$, and $c$, which by rules of error propagation is: \n",
     "\n",
